--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
   },
   "homepage": "https://github.com/jpbberry/censorbot#readme",
   "dependencies": {
-	"discord.js": "^12.0.0",
-	"express": "^4.17.1",
-	"rethinkdbdash": "^2.3.31",
-	"express-router-reload": "^1.0.1",
-	"dblapi.js": "^2.3.0",
-	"moment": "^2.24.0",
-	"moment-duration-format": "^2.3.2",
-	"node-ipc": "^9.1.1"
+    "dblapi.js": "^2.3.0",
+    "discord.js": "github:discordjs/discord.js#fe7df70",
+    "express": "^4.17.1",
+    "express-router-reload": "^1.0.1",
+    "moment": "^2.24.0",
+    "moment-duration-format": "^2.3.2",
+    "node-ipc": "^9.1.1",
+    "rethinkdbdash": "^2.3.31"
   }
 }
