GuildShard for getting Shard ID of guild

--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "ignore": [
       "src/dashboard/views/*",
       "src/dashboard/static/*"
-    ]
+    ],
+    "globals": ["BigInt"]
   },
   "eslintConfig": {
     "rules": {
