--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "s": "standard --fix -v",
     "log": "pm2 logs censorbot",
     "commit": "git add . && echo \"Commit Message:\" && read msg && git commit -m \"$msg\"",
-    "push": "git push"
+    "push": "git push",
+    "jsdoc": "jsdoc ./ -r -c ./jsdoc.json --verbose -d /home/jpb/websites/censorbot/doc"
   },
   "repository": {
     "type": "git",
