--- a/package.json
+++ b/package.json
@@ -22,25 +22,30 @@
   },
   "homepage": "https://github.com/jpbberry/censorbot#readme",
   "devDependencies": {
-    "standard": "*"
+    "standard": "*",
+    "smeijer/latodoc": "*"
   },
   "dependencies": {
-    "node-fetch": "2.6.0",
-    "express": "4.17.1",
+    "body-parser": "1.19.0",
     "ejs": "3.0.1",
-    "ws": "7.2.3",
-    "mongodb": "3.5.5",
+    "emoji-unicode-map": "1.1.10",
+    "express": "4.17.1",
+    "latodoc": "github:smeijer/latodoc",
+    "minami": "^1.2.3",
     "moment": "2.24.0",
     "moment-duration-format": "2.3.2",
-    "body-parser": "1.19.0",
-    "emoji-unicode-map": "1.1.10"
+    "mongodb": "3.5.5",
+    "node-fetch": "2.6.0",
+    "ws": "7.2.3"
   },
   "standard": {
     "ignore": [
       "src/dashboard/views/*",
       "src/dashboard/static/*"
     ],
-    "globals": ["BigInt"]
+    "globals": [
+      "BigInt"
+    ]
   },
   "eslintConfig": {
     "rules": {
