--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,3 +20,13 @@ services:
     restart: "no"
     ports:
       - "1235:1234"
+  treehouse: # custom bot
+    build: .
+    volumes:
+      - ./src:/app
+      - /app/node_modules
+    env_file:
+      - treehouse.env
+    restart: unless-stopped
+    ports:
+      - "1236:1234"
