Move webhooks to master and reinstate logging

--- a/example.env
+++ b/example.env
@@ -10,13 +10,15 @@ DB_PASSWORD=DATABASE PASSWORD
 
 ID=BOT ID
 
-# TEMPORARY, WILL BE REMOVED IN WEBHOOKS/LOGGING REWRITE
-GUILDS_ID=
-GUILDS_TOKEN=
-
 # CUSTOM BOT SETTINGS
 
 CUSTOM=true/false
 ALLOWED_GUILDS=list,of,guild,ids
 LOCK_COMMANDS=true/false
 CUSTOM_STATUS=TYPE,message
+
+# WEBHOOKS
+
+WH_GUILDS=id,token
+WH_SWEARS=id,token
+WH_COMMANDS=id,token
