Some package fixes

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "ejs": "3.0.1",
     "emoji-unicode-map": "1.1.10",
     "express": "4.17.1",
+    "jsdoc": "^3.6.6",
     "moment": "2.24.0",
     "moment-duration-format": "2.3.2",
     "mongodb": "3.5.5",
@@ -40,9 +41,11 @@
   },
   "standard": {
     "ignore": [
-      "src/dashboard/views/*",
-      "src/dashboard/static/*",
-      "docs/*"
+      "website/views/*",
+      "website/static/*",
+      "docs/*",
+      "node_modules/*",
+      "src/util/replace-fonts/u.js"
     ],
     "globals": [
       "BigInt"
