Move filter to rested repo

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ TODO.txt
 *.env
 !example.env
 src/filter/data/fontpacks.json
-src/filter/data/filters/*.json
+src/filter/data/filters/*
 
 # Logs
 logs
