Some random fixes

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "datadog-metrics": "^0.8.1",
+    "dotenv": "^8.2.0",
     "ejs": "3.0.1",
     "emoji-unicode-map": "1.1.10",
     "express": "4.17.1",
