Working on website rewrite

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+website/build
+website/static/build.js
+website/static/build.js.map
+website/src/web.json
+
 TODO.txt
 
 *.env
@@ -47,9 +52,6 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
-
-# TypeScript v1 declaration files
-typings/
 
 # TypeScript cache
 *.tsbuildinfo
