Massive changes, finalized look and animations of inputs, and began guild settings

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "minify": "*"
   },
   "dependencies": {
+    "@yaireo/tagify": "^3.22.0",
     "body-parser": "1.19.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
