Move to scss, fix firefox/moz bugs

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 website/build
 website/static/build.js
 website/static/build.js.map
+website/static/site.html
 website/src/web.json
 website/src/config.json
 
