--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "censorbot",
-  "version": "10.0.0",
+  "version": "11.0.0",
   "description": "Anti-Swear bot for discord",
   "main": "./src/index.js",
   "scripts": {
@@ -25,9 +25,7 @@
   "homepage": "https://github.com/jpbberry/censorbot#readme",
   "devDependencies": {
     "autoprefixer": "10.2.3",
-    "eslint-plugin-typescript": "^0.14.0",
     "jsdoc-baseline": "*",
-    "json-loader": "^0.5.7",
     "memory-fs": "^0.5.0",
     "minify": "*",
     "postcss": "*",
@@ -53,6 +51,7 @@
     "node-fetch": "2.6.1",
     "os-utils": "0.0.14",
     "sass": "^1.32.5",
+    "smoothscroll-polyfill": "^0.4.4",
     "ws": "7.2.3"
   },
   "standard": {
@@ -62,9 +61,6 @@
     ],
     "globals": [
       "BigInt"
-    ],
-    "plugins": [
-      "typescript"
     ]
   },
   "eslintConfig": {
