--- a/website/package.json
+++ b/website/package.json
@@ -22,7 +22,9 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "@yaireo/tagify": "^3.22.0",
     "autoprefixer": "^10.2.5",
+    "discord-api-types": "^0.12.1",
     "memory-fs": "^0.5.0",
     "minify": "^7.0.1",
     "postcss": "^8.2.8",
@@ -31,7 +33,6 @@
     "tagify": "^0.1.1",
     "ts-loader": "^8.0.18",
     "typescript": "^4.2.3",
-    "webpack": "^5.25.0",
-    "@yaireo/tagify": "^3.22.0"
+    "webpack": "^5.25.0"
   }
 }
