--- a/bot/package.json
+++ b/bot/package.json
@@ -19,7 +19,8 @@
   "dependencies": {
     "@discord-rose/admin-middleware": "^1.1.0",
     "@discord-rose/flags-middleware": "^1.0.2",
-    "discord-rose": "^1.0.1",
+    "@discord-rose/permissions-middleware": "^1.1.0",
+    "discord-rose": "^1.1.0",
     "dotenv": "^8.2.0",
     "mongodb": "^3.6.3",
     "node-fetch": "^2.6.1"
@@ -30,5 +31,6 @@
     "discord-api-types": "^0.12.1",
     "ts-standard": "^10.0.0",
     "typescript": "^4.2.3"
-  }
+  },
+  "types": "./types.ts"
 }
