--- a/bot/src/data/SafeConfig.json
+++ b/bot/src/data/SafeConfig.json
@@ -18,7 +18,7 @@
       "type": 0,
       "amount": 3,
       "role": null,
-      "time": null,
+      "time": 0,
       "expires": null
   },
   "webhook": {
