--- a/bot/tsconfig.json
+++ b/bot/tsconfig.json
@@ -6,6 +6,7 @@
     "moduleResolution": "node",
     "module": "commonjs",
     "resolveJsonModule": true,
+    "strictNullChecks": true,
     "allowJs": true,
     "esModuleInterop": true
   }
