--- a/bot/.eslintrc
+++ b/bot/.eslintrc
@@ -8,6 +8,7 @@
     "@typescript-eslint/no-for-in-array": "off",
     "@typescript-eslint/strict-boolean-expressions": "off",
     "@typescript-eslint/no-dynamic-delete": "off",
-    "no-void": "off"
+    "no-void": "off",
+    "@typescript-eslint/restrict-template-expressions": "off"
   }
 }
