--- a/bot/package.json
+++ b/bot/package.json
@@ -21,14 +21,18 @@
     "@discord-rose/flags-middleware": "^1.0.2",
     "@discord-rose/permissions-middleware": "^1.1.0",
     "@jpbberry/cache": "^1.0.4",
-    "discord-rose": "^1.1.3",
+    "crypto": "^1.0.1",
+    "discord-rose": "^1.2.2",
     "dotenv": "^8.2.0",
+    "interface": "github:jpbbots/interface",
     "mongodb": "^3.6.3",
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "ws": "^7.4.4"
   },
   "devDependencies": {
     "@types/mongodb": "^3.6.9",
     "@types/node-fetch": "^2.5.8",
+    "@types/ws": "^7.4.1",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "discord-api-types": "^0.12.1",
     "eslint": "^7.22.0",
@@ -37,7 +41,8 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.3.1",
     "ts-standard": "^10.0.0",
-    "typescript": "^4.2.3"
+    "typescript": "^4.2.3",
+    "typings": "file:../typings"
   },
   "types": "./types.ts"
 }
