--- a/website/package.json
+++ b/website/package.json
@@ -33,7 +33,9 @@
     "smoothscroll-polyfill": "^0.4.4",
     "tagify": "^0.1.1",
     "ts-loader": "^8.0.18",
+    "tsconfig-paths-webpack-plugin": "^3.5.1",
     "typescript": "^4.2.3",
-    "webpack": "^5.25.0"
+    "webpack": "^5.25.0",
+    "webpack-cli": "^4.6.0"
   }
 }
