--- a/website/package.json
+++ b/website/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "buildsite": "node ./build.js"
   },
   "repository": {
     "type": "git",
@@ -18,9 +19,11 @@
   },
   "homepage": "https://github.com/jpbberry/censorbot#readme",
   "dependencies": {
+    "discord-rose": "^1.2.2",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "mongodb": "^3.6.2"
+    "mongodb": "^3.6.2",
+    "querystring": "^0.2.1"
   },
   "devDependencies": {
     "@yaireo/tagify": "^3.22.0",
