--- a/bot/package.json
+++ b/bot/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/jpbberry/censorbot.git"
   },
   "author": "JPBBerry",
-  "license": "ISC",
+  "license": "Mozilla Public License, version 2.0",
   "bugs": {
     "url": "https://github.com/jpbberry/censorbot/issues"
   },
