Start adding restful endpoints and payment management

--- a/bot/package.json
+++ b/bot/package.json
@@ -21,9 +21,12 @@
     "@discord-rose/flags-middleware": "^1.0.2",
     "@discord-rose/permissions-middleware": "^1.1.0",
     "@jpbberry/cache": "^1.0.4",
+    "@jpbberry/load-routes": "^1.0.3",
+    "chargebee": "^2.6.5",
     "crypto": "^1.0.1",
     "discord-rose": "github:discord-rose/discord-rose#build",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "interface": "github:jpbbots/interface",
     "mongodb": "^3.6.3",
     "node-fetch": "^2.6.1",
@@ -35,6 +38,7 @@
     "@types/node-fetch": "^2.5.8",
     "@types/ws": "^7.4.1",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
+    "chargebee-typescript": "^2.0.9",
     "discord-api-types": "latest",
     "eslint": "^7.22.0",
     "eslint-config-standard-with-typescript": "^20.0.0",
