Complete TicketManager and Anti-NSFW images

--- a/bot/src/data/DefaultConfig.json
+++ b/bot/src/data/DefaultConfig.json
@@ -19,6 +19,7 @@
       "amount": 3,
       "role": null,
       "time": null,
+      "retainRoles": false,
       "expires": null
   },
   "webhook": {
