--- a/bot/src/data/SafeConfig.json
+++ b/bot/src/data/SafeConfig.json
@@ -15,6 +15,7 @@
       "amount": 3,
       "role": null,
       "time": null,
+      "retainRoles": false,
       "expires": null
   },
   "webhook": {
