--- a/bot/package.json
+++ b/bot/package.json
@@ -24,6 +24,7 @@
     "@jpbberry/load-routes": "^1.0.3",
     "chargebee": "^2.6.5",
     "crypto": "^1.0.1",
+    "deepai": "^1.0.17",
     "discord-rose": "github:discord-rose/discord-rose#build",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
