--- a/bot/.eslintrc
+++ b/bot/.eslintrc
@@ -9,6 +9,7 @@
     "@typescript-eslint/strict-boolean-expressions": "off",
     "@typescript-eslint/no-dynamic-delete": "off",
     "no-void": "off",
-    "@typescript-eslint/restrict-template-expressions": "off"
+    "@typescript-eslint/restrict-template-expressions": "off",
+    "@typescript-eslint/no-unnecessary-type-assertion": "off"
   }
 }
