Separate DM commands and DM popups

--- a/bot/src/data/DefaultConfig.json
+++ b/bot/src/data/DefaultConfig.json
@@ -12,7 +12,8 @@
   "matchExact": false,
   "msg": {
       "content": null,
-      "deleteAfter": 3000
+      "deleteAfter": 3000,
+      "dm": false
   },
   "punishment": {
       "type": 0,
