--- a/website/package.json
+++ b/website/package.json
@@ -13,7 +13,7 @@
     "url": "git+https://github.com/jpbberry/censorbot.git"
   },
   "author": "JPBBerry",
-  "license": "Mozilla Public License, version 2.0",
+  "license": "MPL-2.0",
   "bugs": {
     "url": "https://github.com/jpbberry/censorbot/issues"
   },
