--- a/example.env
+++ b/example.env
@@ -1,28 +1,30 @@
-BOT_TOKEN=DISCORD BOT CLIENT TOKEN
-OAUTH_TOKEN=DISCORD APPLICATION SECRET
-OAUTH_MYSECRET=SOMETHING RANDOM
+BOT_TOKEN=Discord Bot Token
+OAUTH_TOKEN=Discord Application Secret
+OAUTH_MYSECRET=random string
 
-DBL_TOKEN=none/TOP.GG TOKEN
+DBL_TOKEN=Top.gg token
 
-DB_HOST=DATABASE.IP
-DB_USERNAME=DATABASE USERNAME
-DB_PASSWORD=DATABASE PASSWORD
+DB_USERNAME=db username
+DB_PASSWORD=db password
 
-ID=BOT ID
+STAGING=true/false
 
-# CUSTOM BOT SETTINGS
+ID=user id
+
+PORT=api port
+
+CHARGEBEE=chargebee api key
+CHARGEBEE_WEBHOOK=chargebee webhook password
 
 CUSTOM=true/false
-ALLOWED_GUILDS=list,of,guild,ids
+ALLOWED_GUILDS=list,of,guilds
 LOCK_COMMANDS=true/false
-CUSTOM_STATUS=TYPE,message
+CUSTOM_STATUS=type,Name
 
-# WEBHOOKS
+WH_TICKETS=id,token
+WH_TICKETLOG=id,token
+WH_ERRORS=id,token
 
-WH_GUILDS=id,token
-WH_SWEARS=id,token
-WH_COMMANDS=id,token
-WH_API=id,token
-
-# LOGGING
-DD_KEY=datadog_key
+PERSPECTIVE_KEY=perspective api key
+ANTI_NSFW_KEY=deepai key
+OCR_KEY=ocr.space key
