--- a/website/tsconfig.json
+++ b/website/tsconfig.json
@@ -1,12 +1,23 @@
 {
-  "extends": "../tsconfig.json",
-  "files": ["./src/index.ts"],
   "compilerOptions": {
-    "target": "ES2015",
-    "outDir": "./build",
-    "module": "commonjs",
-    "lib": ["DOM"],
+    "target": "es5",
+    "lib": ["dom", "dom.iterable", "esnext"],
+    "allowJs": true,
+    "skipLibCheck": true,
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
+    "noEmit": true,
+    "esModuleInterop": true,
+    "module": "esnext",
+    "moduleResolution": "node",
     "resolveJsonModule": true,
-    "esModuleInterop": true
-  }
+    "isolatedModules": true,
+    "jsx": "preserve",
+    "baseUrl": "src",
+    "paths": {
+      "~/*": ["components/*"]
+    }
+  },
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "exclude": ["node_modules"]
 }
