--- a/website/.eslintrc
+++ b/website/.eslintrc
@@ -2,5 +2,8 @@
   "extends": ["standard-with-typescript", "../.eslintrc"],
   "parserOptions": {
     "project": "./tsconfig.json"
+  },
+  "rules": {
+    "@typescript-eslint/explicit-function-return-type": "off"
   }
 }
