--- a/website/package.json
+++ b/website/package.json
@@ -1,45 +1,35 @@
 {
-  "name": "website",
-  "version": "1.0.0",
-  "description": "Website for Censor Bot",
-  "main": "server.js",
+  "name": "censorbot-web",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "buildsite": "node ./build.js"
+    "dev": "next dev -p 8535",
+    "build": "next build",
+    "start": "next start -p 8535",
+    "lint": "next lint"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/jpbberry/censorbot.git"
-  },
-  "author": "JPBBerry",
-  "license": "MPL-2.0",
-  "bugs": {
-    "url": "https://github.com/jpbberry/censorbot/issues"
-  },
-  "homepage": "https://github.com/jpbberry/censorbot#readme",
   "dependencies": {
-    "discord-rose": "^1.2.2",
-    "ejs": "^3.1.6",
-    "express": "^4.17.1",
-    "mongodb": "^3.6.2",
-    "querystring": "^0.2.1"
+    "next": "11.0.1",
+    "next-images": "^1.8.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-use": "^17.2.4",
+    "sweetalert2": "^11.0.18",
+    "sweetalert2-react-content": "^4.1.0"
   },
   "devDependencies": {
-    "@yaireo/tagify": "^3.22.0",
-    "autoprefixer": "^10.2.5",
-    "discord-api-types": "^0.12.1",
-    "memory-fs": "^0.5.0",
-    "minify": "^7.0.1",
-    "postcss": "^8.2.8",
-    "regenerator-runtime": "^0.13.7",
-    "sass": "^1.32.8",
-    "smoothscroll-polyfill": "^0.4.4",
-    "tagify": "^0.1.1",
-    "ts-loader": "^8.0.18",
-    "tsconfig-paths-webpack-plugin": "^3.5.1",
-    "typescript": "^4.2.3",
-    "webpack": "^5.25.0",
-    "webpack-cli": "^4.6.0"
-  }
+    "@types/react": "17.0.11",
+    "@types/react-dom": "^17.0.8",
+    "@typescript-eslint/eslint-plugin": "^4.28.0",
+    "eslint": "^7.29.0",
+    "eslint-config-next": "11.0.1",
+    "eslint-config-standard-with-typescript": "^20.0.0",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.3.1",
+    "sass": "^1.35.1",
+    "typescript": "4.3.4",
+    "typings": "file:../typings"
+  },
+  "types": "./src/types.d.ts"
 }
