--- a/website/package.json
+++ b/website/package.json
@@ -18,6 +18,7 @@
     "sweetalert2-react-content": "^4.1.0"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.14.5",
     "@types/react": "17.0.11",
     "@types/react-dom": "^17.0.8",
     "@typescript-eslint/eslint-plugin": "^4.28.0",
