--- a/website/package.json
+++ b/website/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/aos": "^3.0.3",
+    "@yaireo/tagify": "^4.4.0",
     "aos": "^2.3.4",
     "next": "11.0.1",
     "next-images": "^1.8.1",
@@ -23,6 +24,7 @@
     "@babel/preset-typescript": "^7.14.5",
     "@types/react": "17.0.11",
     "@types/react-dom": "^17.0.8",
+    "@types/yaireo__tagify": "^4.3.1",
     "@typescript-eslint/eslint-plugin": "^4.28.0",
     "eslint": "^7.29.0",
     "eslint-config-next": "11.0.1",
