--- a/bot/package.json
+++ b/bot/package.json
@@ -37,6 +37,7 @@
     "ws": "^7.4.4"
   },
   "devDependencies": {
+    "@types/express": "^4.17.12",
     "@types/mongodb": "^3.6.17",
     "@types/node-fetch": "^2.5.8",
     "@types/ws": "^7.4.1",
