--- a/bot/package.json
+++ b/bot/package.json
@@ -30,6 +30,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "interface": "github:jpbbots/interface",
+    "joi": "^17.4.1",
     "mongodb": "^3.6.8",
     "node-fetch": "^2.6.1",
     "topgg-autoposter": "^1.1.10",
