--- a/website/package.json
+++ b/website/package.json
@@ -9,13 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@jpbbots/censorbot-components": "^1.1.27",
     "@types/aos": "^3.0.3",
     "@yaireo/tagify": "^4.4.0",
     "aos": "^2.3.4",
+    "formik": "^2.2.9",
     "next": "11.0.1",
     "next-images": "^1.8.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-icons": "^4.2.0",
     "react-use": "^17.2.4",
     "sweetalert2": "^11.0.18",
     "sweetalert2-react-content": "^4.1.0"
