--- a/website/package.json
+++ b/website/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@jpbberry/typed-emitter": "^1.0.1",
     "@jpbbots/censorbot-components": "^1.1.28",
+    "@reduxjs/toolkit": "^1.6.1",
     "@types/aos": "^3.0.3",
     "@yaireo/tagify": "^4.4.0",
     "aos": "^2.3.4",
@@ -19,6 +21,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
+    "react-redux": "^7.2.4",
     "react-use": "^17.2.4",
     "sweetalert2": "^11.0.18",
     "sweetalert2-react-content": "^4.1.0"
@@ -27,6 +30,7 @@
     "@babel/preset-typescript": "^7.14.5",
     "@types/react": "17.0.11",
     "@types/react-dom": "^17.0.8",
+    "@types/react-redux": "^7.1.18",
     "@types/yaireo__tagify": "^4.3.2",
     "@typescript-eslint/eslint-plugin": "^4.28.0",
     "eslint": "^7.29.0",
