--- a/website/package.json
+++ b/website/package.json
@@ -16,6 +16,7 @@
     "@yaireo/tagify": "^4.4.0",
     "aos": "^2.3.4",
     "formik": "^2.2.9",
+    "framer-motion": "^4.1.17",
     "next": "11.0.1",
     "next-images": "^1.8.1",
     "react": "17.0.2",
@@ -23,6 +24,7 @@
     "react-icons": "^4.2.0",
     "react-redux": "^7.2.4",
     "react-use": "^17.2.4",
+    "styled-components": "^5.3.0",
     "sweetalert2": "^11.0.18",
     "sweetalert2-react-content": "^4.1.0"
   },
