--- a/bot/package.json
+++ b/bot/package.json
@@ -21,15 +21,16 @@
     "@discord-rose/admin-middleware": "^1.1.0",
     "@discord-rose/flags-middleware": "^1.0.2",
     "@discord-rose/permissions-middleware": "^1.2.0",
+    "@discordjs/collection": "^0.2.1",
     "@jpbberry/cache": "^1.0.4",
     "@jpbberry/load-routes": "^1.0.3",
+    "@jpbbots/interface": "^1.0.3",
     "chargebee": "^2.6.5",
     "crypto": "^1.0.1",
     "deepai": "^1.0.17",
     "discord-rose": "github:discord-rose/discord-rose#build",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "interface": "github:jpbbots/interface",
     "joi": "^17.4.1",
     "mongodb": "^3.6.8",
     "node-fetch": "^2.6.1",
@@ -44,7 +45,7 @@
     "@types/ws": "^7.4.1",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "chargebee-typescript": "^2.0.9",
-    "discord-api-types": "latest",
+    "discord-api-types": "^0.21.0",
     "eslint": "^7.22.0",
     "eslint-config-standard-with-typescript": "^20.0.0",
     "eslint-plugin-import": "^2.22.1",
