Begin setting refactor

--- a/website/package.json
+++ b/website/package.json
@@ -9,8 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^1.6.5",
     "@jpbberry/typed-emitter": "^1.0.1",
-    "@jpbbots/censorbot-components": "^2.0.0",
+    "@jpbbots/censorbot-components": "^2.2.0",
     "@reduxjs/toolkit": "^1.6.1",
     "@types/aos": "^3.0.3",
     "@yaireo/tagify": "^4.4.0",
