feat(dashboard): fully implement setting abstraction

--- a/website/package.json
+++ b/website/package.json
@@ -11,19 +11,21 @@
   "dependencies": {
     "@chakra-ui/react": "^1.6.5",
     "@jpbberry/typed-emitter": "^1.0.1",
-    "@jpbbots/censorbot-components": "^2.2.0",
+    "@jpbbots/censorbot-components": "^2.3.0",
     "@reduxjs/toolkit": "^1.6.1",
     "@types/aos": "^3.0.3",
     "@yaireo/tagify": "^4.4.0",
     "aos": "^2.3.4",
     "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
+    "fuzzy-search": "^3.2.1",
     "next": "11.0.1",
     "next-images": "^1.8.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
     "react-redux": "^7.2.4",
+    "react-textarea-autosize": "^8.3.3",
     "react-use": "^17.2.4",
     "styled-components": "^5.3.0",
     "sweetalert2": "^11.0.18",
@@ -31,6 +33,7 @@
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.14.5",
+    "@types/fuzzy-search": "^2.1.1",
     "@types/react": "17.0.11",
     "@types/react-dom": "^17.0.8",
     "@types/react-redux": "^7.1.18",
