Implement new tags component & add word filter & add category ignoring

--- a/bot/src/data/DefaultConfig.json
+++ b/bot/src/data/DefaultConfig.json
@@ -10,6 +10,7 @@
   "filter": [],
   "uncensor": [],
   "phrases": [],
+  "words": [],
   "msg": {
       "content": null,
       "deleteAfter": 3000,
@@ -31,6 +32,7 @@
       "ignored": []
   },
   "channels": [],
+  "categories": [],
   "nsfw": true,
   "multi": false,
   "prefix": "+",
