--- a/bot/src/data/SafeConfig.json
+++ b/bot/src/data/SafeConfig.json
@@ -6,6 +6,7 @@
   "filter": [],
   "uncensor": [],
   "phrases": [],
+  "words": [],
   "msg": {
       "content": false,
       "deleteAfter": 3000,
@@ -25,6 +26,7 @@
       "separate": true
   },
   "channels": [],
+  "categories": [],
   "nsfw": true,
   "multi": false,
   "prefix": null,
