--- a/website/package.json
+++ b/website/package.json
@@ -14,12 +14,11 @@
     "@jpbbots/censorbot-components": "^2.3.0",
     "@reduxjs/toolkit": "^1.6.1",
     "@types/aos": "^3.0.3",
-    "@yaireo/tagify": "^4.4.0",
     "aos": "^2.3.4",
     "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
     "fuzzy-search": "^3.2.1",
-    "next": "11.0.1",
+    "next": "^11.1.0",
     "next-images": "^1.8.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -37,7 +36,6 @@
     "@types/react": "17.0.11",
     "@types/react-dom": "^17.0.8",
     "@types/react-redux": "^7.1.18",
-    "@types/yaireo__tagify": "^4.3.2",
     "@typescript-eslint/eslint-plugin": "^4.28.0",
     "eslint": "^7.29.0",
     "eslint-config-next": "11.0.1",
