refactor: change to new event methods

--- a/bot/tsconfig.json
+++ b/bot/tsconfig.json
@@ -5,6 +5,7 @@
     "outDir": "./dist",
     "moduleResolution": "node",
     "module": "commonjs",
+    "experimentalDecorators": true,
     "resolveJsonModule": true,
     "strictNullChecks": true,
     "allowJs": true,
