--- a/bot/package.json
+++ b/bot/package.json
@@ -24,11 +24,12 @@
     "@discordjs/collection": "^0.2.1",
     "@jpbberry/cache": "^1.0.4",
     "@jpbberry/load-routes": "^1.0.3",
+    "@jpbberry/typed-emitter": "^1.2.1",
     "@jpbbots/interface": "^1.0.3",
     "chargebee": "^2.6.5",
     "crypto": "^1.0.1",
     "deepai": "^1.0.17",
-    "discord-rose": "github:discord-rose/discord-rose#build",
+    "discord-rose": "^1.5.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "joi": "^17.4.1",
@@ -45,7 +46,7 @@
     "@types/ws": "^7.4.1",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "chargebee-typescript": "^2.0.9",
-    "discord-api-types": "^0.21.0",
+    "discord-api-types": "^0.22.0",
     "eslint": "^7.22.0",
     "eslint-config-standard-with-typescript": "^20.0.0",
     "eslint-plugin-import": "^2.22.1",
