--- a/bot/.eslintrc
+++ b/bot/.eslintrc
@@ -1,5 +1,13 @@
 {
   "extends": ["standard-with-typescript", "../.eslintrc"],
+  "overrides": [
+    {
+      "files": ["src/api/**/*"],
+      "rules": {
+        "@typescript-eslint/explicit-function-return-type": "off"
+      }
+    }
+  ],
   "parserOptions": {
     "project": "./tsconfig.json"
   }
