--- a/bot/tsconfig.json
+++ b/bot/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "include": ["src/.run/*.ts", "src/commands/**/*.ts", "src/data/filter/index.js", "src/data/filter/**/*.json", "src/routes/**/*.ts"],
+  "include": ["src/**/*", "src/data/filter/**/*.json", "src/.run/*.ts"],
   "compilerOptions": {
     "target": "ES2017",
     "outDir": "./dist",
