--- a/bot/tsconfig.json
+++ b/bot/tsconfig.json
@@ -6,6 +6,7 @@
     "moduleResolution": "node",
     "module": "commonjs",
     "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
     "resolveJsonModule": true,
     "strictNullChecks": true,
     "allowJs": true,
