refactor: complete rewrite to nestjs

--- a/website/package.json
+++ b/website/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@chakra-ui/react": "^1.6.5",
-    "@jpbberry/typed-emitter": "^1.0.1",
+    "@jpbberry/typed-emitter": "^1.2.1",
     "@jpbbots/censorbot-components": "^2.4.0",
     "@reduxjs/toolkit": "^1.6.1",
     "@types/aos": "^3.0.3",
@@ -26,17 +26,21 @@
     "react-redux": "^7.2.4",
     "react-textarea-autosize": "^8.3.3",
     "react-use": "^17.2.4",
+    "socket.io-client": "^4.2.0",
     "styled-components": "^5.3.0",
     "sweetalert2": "^11.0.18",
     "sweetalert2-react-content": "^4.1.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.15.0",
+    "@babel/plugin-proposal-decorators": "^7.14.5",
     "@babel/preset-typescript": "^7.14.5",
     "@types/fuzzy-search": "^2.1.1",
     "@types/react": "17.0.11",
     "@types/react-dom": "^17.0.8",
     "@types/react-redux": "^7.1.18",
     "@typescript-eslint/eslint-plugin": "^4.28.0",
+    "@zeit/next-typescript": "^1.1.1",
     "eslint": "^7.29.0",
     "eslint-config-next": "11.0.1",
     "eslint-config-standard-with-typescript": "^20.0.0",
