--- a/website/tsconfig.json
+++ b/website/tsconfig.json
@@ -14,6 +14,7 @@
     "esModuleInterop": true,
     "module": "esnext",
     "moduleResolution": "node",
+    "experimentalDecorators": true,
     "resolveJsonModule": true,
     "preserveConstEnums": true,
     "isolatedModules": true,
