Started mobile formatting

--- a/bot/package.json
+++ b/bot/package.json
@@ -25,17 +25,17 @@
     "@jpbberry/cache": "^1.0.4",
     "@jpbberry/load-routes": "^1.0.3",
     "@jpbberry/typed-emitter": "^1.2.1",
-    "@jpbbots/interface": "^1.0.3",
+    "@jpbbots/interface": "^1.0.5",
     "@nestjs/common": "^8.0.6",
     "@nestjs/core": "^8.0.6",
     "@nestjs/platform-express": "^8.0.6",
     "@nestjs/platform-socket.io": "^8.0.6",
-    "@nestjs/swagger": "^5.0.9",
+    "@nestjs/swagger": "^5.1.0",
     "@nestjs/websockets": "^8.0.6",
     "chargebee": "^2.6.5",
     "crypto": "^1.0.1",
     "deepai": "^1.0.17",
-    "discord-rose": "^1.5.2",
+    "discord-rose": "^1.5.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "joi": "^17.4.1",
@@ -44,6 +44,7 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.3.0",
     "socket.io": "^4.2.0",
+    "swagger-ui-express": "^4.1.6",
     "topgg-autoposter": "^1.1.10",
     "validate": "^5.1.0",
     "ws": "^7.4.4"
