--- a/website/package.json
+++ b/website/package.json
@@ -9,45 +9,47 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@chakra-ui/react": "^1.6.5",
+    "@chakra-ui/react": "^1.6.4",
+    "@emotion/react": "^11.4.0",
+    "@emotion/styled": "^11.3.0",
     "@jpbberry/typed-emitter": "^1.2.1",
-    "@jpbbots/censorbot-components": "^2.4.0",
+    "@jpbbots/censorbot-components": "^2.5.0",
     "@reduxjs/toolkit": "^1.6.1",
-    "@types/aos": "^3.0.3",
+    "@types/aos": "^3.0.4",
     "aos": "^2.3.4",
     "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
     "fuzzy-search": "^3.2.1",
-    "next": "^11.1.0",
+    "next": "^11.1.2",
     "next-images": "^1.8.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
-    "react-redux": "^7.2.4",
+    "react-redux": "^7.2.5",
     "react-textarea-autosize": "^8.3.3",
-    "react-use": "^17.2.4",
+    "react-use": "^17.3.1",
     "socket.io-client": "^4.2.0",
-    "styled-components": "^5.3.0",
-    "sweetalert2": "^11.0.18",
-    "sweetalert2-react-content": "^4.1.0"
+    "styled-components": "^5.3.1",
+    "sweetalert2": "^11.1.4",
+    "sweetalert2-react-content": "^4.1.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.15.0",
-    "@babel/plugin-proposal-decorators": "^7.14.5",
-    "@babel/preset-typescript": "^7.14.5",
+    "@babel/core": "^7.15.5",
+    "@babel/plugin-proposal-decorators": "^7.15.4",
+    "@babel/preset-typescript": "^7.15.0",
     "@types/fuzzy-search": "^2.1.1",
     "@types/react": "17.0.11",
-    "@types/react-dom": "^17.0.8",
+    "@types/react-dom": "^17.0.9",
     "@types/react-redux": "^7.1.18",
-    "@typescript-eslint/eslint-plugin": "^4.28.0",
+    "@typescript-eslint/eslint-plugin": "^4.31.0",
     "@zeit/next-typescript": "^1.1.1",
-    "eslint": "^7.29.0",
+    "eslint": "^7.32.0",
     "eslint-config-next": "11.0.1",
     "eslint-config-standard-with-typescript": "^20.0.0",
-    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.3.1",
-    "sass": "^1.35.1",
+    "sass": "^1.39.0",
     "typescript": "4.3.4",
     "typings": "file:../typings"
   },
