--- a/bot/package.json
+++ b/bot/package.json
@@ -41,6 +41,7 @@
     "joi": "^17.4.1",
     "mongodb": "^3.6.8",
     "node-fetch": "^2.6.1",
+    "q": "^1.5.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.3.0",
     "socket.io": "^4.2.0",
@@ -53,6 +54,7 @@
     "@types/express": "^4.17.12",
     "@types/mongodb": "^3.6.17",
     "@types/node-fetch": "^2.5.8",
+    "@types/q": "^1.5.5",
     "@types/ws": "^7.4.1",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "chargebee-typescript": "^2.0.9",
