feat: add customizable innap nickname

--- a/bot/src/data/DefaultConfig.json
+++ b/bot/src/data/DefaultConfig.json
@@ -5,6 +5,8 @@
       "off"
   ],
   "censor": 7,
+  "nickReplace": "Inappropriate Name",
+  "removeNick": true,
   "log": null,
   "role": [],
   "filter": [],
