--- a/website/package.json
+++ b/website/package.json
@@ -13,7 +13,7 @@
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
     "@jpbberry/typed-emitter": "^1.2.1",
-    "@jpbbots/censorbot-components": "^2.5.0",
+    "@jpbbots/censorbot-components": "^2.5.1",
     "@reduxjs/toolkit": "^1.6.1",
     "@types/aos": "^3.0.4",
     "aos": "^2.3.4",
@@ -41,15 +41,19 @@
     "@types/react": "17.0.11",
     "@types/react-dom": "^17.0.9",
     "@types/react-redux": "^7.1.18",
-    "@typescript-eslint/eslint-plugin": "^4.31.0",
+    "@typescript-eslint/eslint-plugin": "^5.2.0",
     "@zeit/next-typescript": "^1.1.1",
-    "eslint": "^7.32.0",
+    "eslint": "^8.1.0",
     "eslint-config-next": "11.0.1",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard-with-typescript": "^20.0.0",
-    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^4.3.1",
+    "prettier": "^2.4.1",
     "sass": "^1.39.0",
+    "tseslint": "0.0.2",
     "typescript": "4.3.4",
     "typings": "file:../typings"
   },
