fix: many bugs messing with api requests

--- a/bot/src/data/DefaultConfig.json
+++ b/bot/src/data/DefaultConfig.json
@@ -33,8 +33,7 @@
       "separate": true,
       "ignored": []
   },
-  "channels": [],
-  "categories": [],
+  "exceptions": [],
   "nsfw": true,
   "multi": false,
   "prefix": "+",
