--- a/bot/.eslintrc
+++ b/bot/.eslintrc
@@ -1,5 +1,9 @@
 {
-  "extends": ["standard-with-typescript", "../.eslintrc"],
+  "extends": [
+    "standard-with-typescript",
+    "../.eslintrc",
+    "plugin:prettier/recommended"
+  ],
   "overrides": [
     {
       "files": ["src/api/**/*"],
