--- a/bot/package.json
+++ b/bot/package.json
@@ -60,10 +60,13 @@
     "chargebee-typescript": "^2.0.9",
     "discord-api-types": "^0.22.0",
     "eslint": "^7.22.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard-with-typescript": "^20.0.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^4.3.1",
+    "prettier": "^2.4.1",
     "ts-standard": "^10.0.0",
     "typescript": "^4.4.2",
     "typings": "file:../typings"
