refactor: switch to jadl and redo payment processing

--- a/bot/package.json
+++ b/bot/package.json
@@ -22,6 +22,9 @@
     "@discord-rose/flags-middleware": "^1.0.2",
     "@discord-rose/permissions-middleware": "^1.2.0",
     "@discordjs/collection": "^0.2.1",
+    "@discordjs/rest": "0.1.0-canary.0",
+    "@jadl/cmd": "^0.1.4",
+    "@jadl/embed": "0.0.3",
     "@jpbberry/cache": "^1.0.4",
     "@jpbberry/load-routes": "^1.0.3",
     "@jpbberry/typed-emitter": "^1.2.1",
@@ -35,9 +38,9 @@
     "chargebee": "^2.6.5",
     "crypto": "^1.0.1",
     "deepai": "^1.0.17",
-    "discord-rose": "^1.5.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jadl": "^0.1.2",
     "joi": "^17.4.1",
     "mongodb": "^3.6.8",
     "node-fetch": "^2.6.1",
@@ -58,7 +61,7 @@
     "@types/ws": "^7.4.1",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "chargebee-typescript": "^2.0.9",
-    "discord-api-types": "^0.22.0",
+    "discord-api-types": "^0.23.1",
     "eslint": "^7.22.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard-with-typescript": "^20.0.0",
