--- a/website/package.json
+++ b/website/package.json
@@ -9,20 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/layout": "^1.6.0",
     "@chakra-ui/react": "^1.6.4",
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
     "@jpbberry/typed-emitter": "^1.2.1",
-    "@jpbbots/censorbot-components": "^2.5.2",
+    "@jpbbots/censorbot-components": "^3.0.0",
     "@reduxjs/toolkit": "^1.6.1",
     "@types/aos": "^3.0.4",
     "aos": "^2.3.4",
     "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
     "fuzzy-search": "^3.2.1",
-    "next": "^11.1.2",
+    "next": "^12.0.7",
     "next-images": "^1.8.1",
-    "react": "17.0.2",
+    "react": "^17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
     "react-redux": "^7.2.5",
