--- a/bot/src/data/DefaultConfig.json
+++ b/bot/src/data/DefaultConfig.json
@@ -1,9 +1,5 @@
 {
-  "filters": [
-      "en",
-      "es",
-      "off"
-  ],
+  "filters": ["en", "es", "off"],
   "censor": 7,
   "nickReplace": "Inappropriate Name",
   "removeNick": true,
@@ -14,24 +10,19 @@
   "phrases": [],
   "words": [],
   "msg": {
-      "content": null,
-      "deleteAfter": 3000,
-      "dm": false
+    "content": null,
+    "deleteAfter": 3000,
+    "dm": false
   },
-  "punishment": {
-      "type": 0,
-      "amount": 3,
-      "role": null,
-      "time": null,
-      "retainRoles": false,
-      "expires": null,
-      "ignored": []
+  "punishments": {
+    "expires": null,
+    "levels": []
   },
   "webhook": {
-      "enabled": false,
-      "replace": 0,
-      "separate": true,
-      "ignored": []
+    "enabled": false,
+    "replace": 0,
+    "separate": true,
+    "ignored": []
   },
   "exceptions": [],
   "nsfw": true,
