--- a/website/package.json
+++ b/website/package.json
@@ -14,13 +14,14 @@
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
     "@jpbberry/typed-emitter": "^1.2.1",
-    "@jpbbots/censorbot-components": "^3.1.1",
+    "@jpbbots/censorbot-components": "^3.1.3",
     "@reduxjs/toolkit": "^1.6.1",
     "@types/aos": "^3.0.4",
     "aos": "^2.3.4",
     "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
     "fuzzy-search": "^3.2.1",
+    "humanize-duration": "^3.27.1",
     "next": "^12.0.7",
     "next-images": "^1.8.1",
     "react": "^17.0.2",
@@ -39,6 +40,7 @@
     "@babel/plugin-proposal-decorators": "^7.15.4",
     "@babel/preset-typescript": "^7.15.0",
     "@types/fuzzy-search": "^2.1.1",
+    "@types/humanize-duration": "^3.27.1",
     "@types/react": "17.0.11",
     "@types/react-dom": "^17.0.9",
     "@types/react-redux": "^7.1.18",
