--- a/bot/package.json
+++ b/bot/package.json
@@ -18,17 +18,14 @@
   },
   "homepage": "https://github.com/jpbberry/censorbot#readme",
   "dependencies": {
-    "@discord-rose/admin-middleware": "^1.1.0",
-    "@discord-rose/flags-middleware": "^1.0.2",
-    "@discord-rose/permissions-middleware": "^1.2.0",
     "@discordjs/collection": "^0.2.1",
-    "@discordjs/rest": "0.1.0-canary.0",
+    "@discordjs/rest": "^0.2.0-canary.0",
     "@jadl/cmd": "^0.1.5",
     "@jadl/embed": "0.0.3",
     "@jpbberry/cache": "^1.0.4",
     "@jpbberry/load-routes": "^1.0.3",
     "@jpbberry/typed-emitter": "^1.2.1",
-    "@jpbbots/interface": "^1.0.5",
+    "@jpbbots/interface": "^2.0.1",
     "@nestjs/common": "^8.0.6",
     "@nestjs/core": "^8.0.6",
     "@nestjs/platform-express": "^8.0.6",
@@ -40,7 +37,7 @@
     "deepai": "^1.0.17",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "jadl": "^0.1.5",
+    "jadl": "^0.1.6",
     "joi": "^17.4.1",
     "mongodb": "^3.6.8",
     "node-fetch": "^2.6.1",
@@ -59,18 +56,8 @@
     "@types/node-fetch": "^2.5.8",
     "@types/q": "^1.5.5",
     "@types/ws": "^7.4.1",
-    "@typescript-eslint/eslint-plugin": "^4.18.0",
     "chargebee-typescript": "^2.0.9",
     "discord-api-types": "^0.26.0",
-    "eslint": "^7.22.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-config-standard-with-typescript": "^20.0.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-promise": "^4.3.1",
-    "prettier": "^2.4.1",
-    "ts-standard": "^10.0.0",
     "typescript": "^4.4.2",
     "typings": "file:../typings"
   },
