--- a/website/package.json
+++ b/website/package.json
@@ -44,19 +44,9 @@
     "@types/react": "17.0.11",
     "@types/react-dom": "^17.0.9",
     "@types/react-redux": "^7.1.18",
-    "@typescript-eslint/eslint-plugin": "^5.2.0",
     "@zeit/next-typescript": "^1.1.1",
-    "eslint": "^8.1.0",
-    "eslint-config-next": "11.0.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-config-standard-with-typescript": "^20.0.0",
-    "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-promise": "^4.3.1",
-    "prettier": "^2.4.1",
+    "eslint-plugin-react": "^7.28.0",
     "sass": "^1.39.0",
-    "tseslint": "0.0.2",
     "typescript": "4.3.4",
     "typings": "file:../typings"
   },
