feat(custom-bot): redo custom bot system
Co-authored-by: MILLION <Million900o@users.noreply.github.com>

--- a/bot/tsconfig.json
+++ b/bot/tsconfig.json
@@ -9,6 +9,7 @@
     "emitDecoratorMetadata": true,
     "resolveJsonModule": true,
     "strictNullChecks": true,
+    "sourceMap": true,
     "allowJs": true,
     "esModuleInterop": true
   }
