--- a/bot/package.json
+++ b/bot/package.json
@@ -44,6 +44,7 @@
     "q": "^1.5.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.3.0",
+    "skia-canvas": "^0.9.27",
     "socket.io": "^4.2.0",
     "swagger-ui-express": "^4.1.6",
     "topgg-autoposter": "^1.1.10",
@@ -55,6 +56,7 @@
     "@types/mongodb": "^3.6.17",
     "@types/node-fetch": "^2.5.8",
     "@types/q": "^1.5.5",
+    "@types/skia-canvas": "^0.9.2",
     "@types/ws": "^7.4.1",
     "chargebee-typescript": "^2.0.9",
     "discord-api-types": "^0.26.0",
