--- a/website/package.json
+++ b/website/package.json
@@ -25,9 +25,11 @@
     "next": "^12.0.7",
     "next-images": "^1.8.1",
     "react": "^17.0.2",
+    "react-animated-numbers": "^0.8.0",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
     "react-redux": "^7.2.5",
+    "react-spring": "^9.4.2",
     "react-textarea-autosize": "^8.3.3",
     "react-use": "^17.3.1",
     "socket.io-client": "^4.2.0",
