refactor!: filter type strategy & punishment allowed

--- a/bot/src/data/DefaultConfig.json
+++ b/bot/src/data/DefaultConfig.json
@@ -16,7 +16,8 @@
   },
   "punishments": {
     "expires": null,
-    "levels": []
+    "levels": [],
+    "allow": 63
   },
   "webhook": {
     "enabled": false,
