--- a/bot/src/data/SafeConfig.json
+++ b/bot/src/data/SafeConfig.json
@@ -16,7 +16,8 @@
   },
   "punishments": {
     "expires": null,
-    "levels": []
+    "levels": [],
+    "allow": 0
   },
   "webhook": {
     "enabled": false,
