feat: add unit test for Filter

--- a/bot/tsconfig.json
+++ b/bot/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "include": ["src/**/*", "src/data/filter/**/*.json", "src/.run/*.ts"],
+  "include": ["src/**/*", "src/data/filter/**/*.json", "src/.run/*.ts", "__tests__"],
   "compilerOptions": {
     "target": "ES2020",
     "outDir": "./dist",
