--- a/bot/package.json
+++ b/bot/package.json
@@ -4,7 +4,7 @@
   "description": "Anti-swear bot for Discord",
   "main": "./dist/.run/master.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest ./__tests__",
     "build": "rm -rf ./dist && tsc"
   },
   "repository": {
@@ -52,14 +52,20 @@
     "ws": "^7.4.4"
   },
   "devDependencies": {
+    "@babel/core": "^7.16.10",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-typescript": "^7.16.7",
     "@types/express": "^4.17.12",
+    "@types/jest": "^27.4.0",
     "@types/mongodb": "^3.6.17",
     "@types/node-fetch": "^2.5.8",
     "@types/q": "^1.5.5",
     "@types/skia-canvas": "^0.9.2",
     "@types/ws": "^7.4.1",
+    "babel-jest": "^27.4.6",
     "chargebee-typescript": "^2.0.9",
     "discord-api-types": "^0.26.0",
+    "jest": "^27.4.7",
     "typescript": "^4.4.2",
     "typings": "file:../typings"
   },
