--- a/website/package.json
+++ b/website/package.json
@@ -22,6 +22,7 @@
     "framer-motion": "^4.1.17",
     "fuzzy-search": "^3.2.1",
     "humanize-duration": "^3.27.1",
+    "jadl": "^0.1.6",
     "next": "^12.0.7",
     "next-images": "^1.8.1",
     "react": "^17.0.2",
@@ -35,7 +36,8 @@
     "socket.io-client": "^4.2.0",
     "styled-components": "^5.3.1",
     "sweetalert2": "^11.1.4",
-    "sweetalert2-react-content": "^4.1.1"
+    "sweetalert2-react-content": "^4.1.1",
+    "swr": "^1.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
